# qlog

./: CMakeLists.txt
include/: qlog.hpp  teestream.hpp
src/: qlog.cpp
test/: test.cpp
